# bitservice

./: .gitignore  .gitmodules  Cargo.toml  README.md  codebook.toml  delegate.rs  justfile  rp_bitservice_peers_config.toml
.github/workflows/: rust_test.yml
artifacts/: oblivious_map_read_proof_schema.json  oblivious_map_write_proof_schema.json
bitservice-client/: Cargo.toml
bitservice-client/src/: config.rs  lib.rs
bitservice-peer/: Cargo.toml
bitservice-peer/deploy/: docker-compose.yaml
bitservice-peer/migrations/: 20251029101715_init.down.sql  20251029101715_init.up.sql
bitservice-peer/src/: api.rs  ban_service.rs  config.rs  crypto_device.rs  lib.rs  repository.rs  tcp_mpc_net.rs  ws_mpc_net.rs
bitservice-peer/src/api/: errors.rs  v1.rs
bitservice-server/: Cargo.toml
bitservice-server/src/: api.rs  config.rs  lib.rs  rw_queue.rs
bitservice-server/src/api/: errors.rs  health.rs  v1.rs
bitservice-test/: Cargo.toml
bitservice-test/src/: lib.rs
bitservice-test/tests/: tests.rs
bitservice-types/: Cargo.toml
bitservice-types/src/: ban.rs  groth16.rs  lib.rs  prune.rs  read.rs  unban.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  Upgrade.s.sol
contracts/src/: ReadGroth16Verifier.sol  RpAccountRegistry.sol  SMTRootUpdater.sol  WriteGroth16Verifier.sol
contracts/test/: RpAccountRegistry.t.sol
dev-keys/: peer0.pk  peer0.sk  peer1.pk  peer1.sk  peer2.pk  peer2.sk
indexer/: Cargo.toml
indexer/src/: main.rs  rp_indexer.rs
tcp-mpc-net/: Cargo.toml
tcp-mpc-net/src/: lib.rs
ws-mpc-net/: Cargo.toml
ws-mpc-net/src/: lib.rs
