[workspace]
members = [
    "bitservice-peer",
    "bitservice-server",
    "bitservice-types",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/bitservice"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
axum = "0.8"
axum-test = "18"
mpc-net = { git = "https://github.com/TaceoLabs/co-snarks.git", default-features = false }
mpc-core = { git = "https://github.com/TaceoLabs/co-snarks.git" }
clap = "4"
eyre = { version = "0.6" }
futures = "0.3"
git-version = "0.3"
http = "1"
humantime = "2"
itertools = "0.14"
metrics = "0.24"
nodes-telemetry = { git = "https://github.com/TaceoLabs/nodes-telemetry.git", rev = "06f4f13"}
parking_lot = "0.12"
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
reqwest = { version = "0.12" }
rustls = "0.23"
serde = { version = "1" }
thiserror = { version = "2" }
toml = "0.9"
tokio = { version = "1" }
tokio-util = "0.7"
tower-http = "0.6"
tracing = { version = "0.1" }
tokio-tungstenite = "0.28"
uuid = { version = "1" }
bitservice-types = { path = "bitservice-types" }

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
incremental = false
debug = true
