[package]
name = "bitservice-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
base64.workspace = true
bincode = { workspace = true, features = ["serde"] }
bitservice-types.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
co-noir-to-r1cs.workspace = true
crypto_box = { workspace = true, features = ["seal"] }
eyre.workspace = true
mpc-core.workspace = true
nodes-telemetry = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"], optional = true }
tracing.workspace = true

[features]
default = ["bitservice-client-bin"]
bitservice-client-bin = ["dep:clap", "dep:nodes-telemetry", "dep:rustls", "dep:tokio"]

[[bin]]
name = "bitservice-client"
required-features = ["bitservice-client-bin"]
