[package]
name = "bitservice-peer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
mpc-net.workspace = true
mpc-core.workspace = true
nodes-telemetry = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
http.workspace = true
parking_lot.workspace = true
git-version.workspace = true
bitservice-types.workspace = true

[dev-dependencies]
axum-test = { workspace = true }
