[package]
name = "bitservice-peer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-serialize.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
bincode = { workspace = true, features = ["serde"] }
bitservice-types.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
co-noir-to-r1cs.workspace = true
crypto_box = { workspace = true, features = ["seal", "std"] }
eyre.workspace = true
git-version.workspace = true
http.workspace = true
humantime = { workspace = true }
metrics = { workspace = true }
mpc-core.workspace = true
nodes-telemetry = { workspace = true }
oblivious-linear-scan-map.workspace = true
rand.workspace = true
rustls = { workspace = true }
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "postgres"] }
tcp-mpc-net.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
ws-mpc-net.workspace = true

[dev-dependencies]
axum-test.workspace = true
