[package]
name = "bitservice-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true }
bitservice-types.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
git-version.workspace = true
http.workspace = true
humantime = { workspace = true }
metrics = { workspace = true }
nodes-telemetry = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
toml.workspace = true
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test.workspace = true
