[package]
name = "bitservice-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
bitservice-peer.workspace = true
bitservice-server.workspace = true
bitservice-client.workspace = true
co-noir-to-r1cs.workspace = true
crypto_box = { workspace = true, features = ["seal"] }
eyre.workspace = true
rand.workspace = true
reqwest.workspace = true
testcontainers = { version = "0.25.2", features = ["http_wait_plain", "host-port-exposure"] }
testcontainers-modules = { version = "0.13", features = ["postgres", "localstack"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }

