[package]
name = "bitservice-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-groth16.workspace = true
ark-serde-compat.workspace = true
mpc-core.workspace = true
serde = { workspace = true, features = ["derive"] }
