[package]
name = "rp-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum/Alloy dependencies
alloy = { version = "1", features = ["full", "node-bindings"] }
alloy-primitives = "1"
alloy-sol-types = "1"

# Merkle tree and cryptography
# semaphore-rs = { version = "0.5", features = ["arkworks"] }
semaphore-rs-trees = "0.5.0"
semaphore-rs-hasher = "0.5.0"
ark-bn254 = "0.5"
ark-ff = "0.5"
poseidon2 = { package = "taceo-poseidon2", version = "0.1" }
take_mut = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "json"] }

# Web server
axum = { version = "0.8.6", features = ["macros", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1