[package]
name = "ws-mpc-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
eyre.workspace = true
futures = { workspace = true }
http.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-tungstenite.workspace = true
tokio-util = { workspace = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
